<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/off_white"
    android:paddingHorizontal="34sp"
    tools:context=".fragments.SavedNewsFragment">

    <ImageButton
        android:id="@+id/back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="34sp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/back"
        android:elevation="10dp"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        android:scaleType="fitXY"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/black" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="34sp"
        android:fontFamily="@font/archivo"
        android:gravity="center"
        android:text="@string/saved"
        android:textColor="@color/light_green"
        android:textSize="28sp"
        app:layout_constraintEnd_toStartOf="@id/deleteAll"
        app:layout_constraintStart_toEndOf="@id/back"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/deleteAll"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="34sp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/Delete"
        android:elevation="10dp"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        android:scaleType="fitXY"
        android:src="@drawable/baseline_delete_forever_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSavedNews"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

</androidx.constraintlayout.widget.ConstraintLayout>